--- a/#src/delivery.html
+++ b/#src/delivery.html
@@ -111,122 +111,120 @@
                                         </ul>
                                         <h3>Тарифы на доставку</h3>
                                         <table>
-                                            <thead>
-                                                <tr>
-                                                    <td style="width: 25%">Вес</td>
-                                                    <td style="width: 25%">1 Зона доставки <br>(15 км от склада)</td>
-                                                    <td style="width: 25%">2 Зона доставки <br>(25 км от склада)</td>
-                                                    <td style="width: 25%">Доставка за пределы 1,2&nbsp;зон доставки</td>
-                                                </tr>
-                                            </thead>
                                             <tbody>
                                                 <tr>
-                                                    <td style="width: 25%">1–100 кг</td>
-                                                    <td style="width: 25%">300</td>
-                                                    <td style="width: 25%">650</td>
-                                                    <td style="width: 25%">650 + 40 р/км</td>
+                                                    <td>Вес</td>
+                                                    <td>1 Зона доставки <br>(15 км от склада)</td>
+                                                    <td>2 Зона доставки <br>(25 км от склада)</td>
+                                                    <td>Доставка за пределы 1,2&nbsp;зон доставки</td>
                                                 </tr>
                                                 <tr>
-                                                    <td style="width: 25%">100–200 кг</td>
-                                                    <td style="width: 25%">400</td>
-                                                    <td style="width: 25%">850</td>
-                                                    <td style="width: 25%">650 + 40 р/км</td>
+                                                    <td>1–100 кг</td>
+                                                    <td>300</td>
+                                                    <td>650</td>
+                                                    <td>650 + 40 р/км</td>
                                                 </tr>
                                                 <tr>
-                                                    <td style="width: 25%">200–300 кг</td>
-                                                    <td style="width: 25%">600</td>
-                                                    <td style="width: 25%">950</td>
-                                                    <td style="width: 25%">650 + 40 р/км</td>
+                                                    <td>100–200 кг</td>
+                                                    <td>400</td>
+                                                    <td>850</td>
+                                                    <td>650 + 40 р/км</td>
                                                 </tr>
                                                 <tr>
-                                                    <td style="width: 25%">300–400 кг</td>
-                                                    <td style="width: 25%">700</td>
-                                                    <td style="width: 25%">1050</td>
-                                                    <td style="width: 25%">650 + 40 р/км</td>
+                                                    <td>200–300 кг</td>
+                                                    <td>600</td>
+                                                    <td>950</td>
+                                                    <td>650 + 40 р/км</td>
                                                 </tr>
                                                 <tr>
-                                                    <td style="width: 25%">400–500 кг</td>
-                                                    <td style="width: 25%">800</td>
-                                                    <td style="width: 25%">1150</td>
-                                                    <td style="width: 25%">650 + 40 р/км</td>
+                                                    <td>300–400 кг</td>
+                                                    <td>700</td>
+                                                    <td>1050</td>
+                                                    <td>650 + 40 р/км</td>
                                                 </tr>
                                                 <tr>
-                                                    <td style="width: 25%">500–600 кг</td>
-                                                    <td style="width: 25%">900</td>
-                                                    <td style="width: 25%">1250</td>
-                                                    <td style="width: 25%">650 + 40 р/км</td>
+                                                    <td>400–500 кг</td>
+                                                    <td>800</td>
+                                                    <td>1150</td>
+                                                    <td>650 + 40 р/км</td>
                                                 </tr>
                                                 <tr>
-                                                    <td style="width: 25%">600–700 кг</td>
-                                                    <td style="width: 25%">1000</td>
-                                                    <td style="width: 25%">1350</td>
-                                                    <td style="width: 25%">650 + 40 р/км</td>
+                                                    <td>500–600 кг</td>
+                                                    <td>900</td>
+                                                    <td>1250</td>
+                                                    <td>650 + 40 р/км</td>
                                                 </tr>
                                                 <tr>
-                                                    <td style="width: 25%">700–800 кг</td>
-                                                    <td style="width: 25%">1100</td>
-                                                    <td style="width: 25%">1450</td>
-                                                    <td style="width: 25%">650 + 40 р/км</td>
+                                                    <td>600–700 кг</td>
+                                                    <td>1000</td>
+                                                    <td>1350</td>
+                                                    <td>650 + 40 р/км</td>
                                                 </tr>
                                                 <tr>
-                                                    <td style="width: 25%">900–1000 кг</td>
-                                                    <td style="width: 25%">1200</td>
-                                                    <td style="width: 25%">1550</td>
-                                                    <td style="width: 25%">650 + 40 р/км</td>
+                                                    <td>700–800 кг</td>
+                                                    <td>1100</td>
+                                                    <td>1450</td>
+                                                    <td>650 + 40 р/км</td>
                                                 </tr>
                                                 <tr>
-                                                    <td style="width: 25%">1000–1100 кг</td>
-                                                    <td style="width: 25%">1300</td>
-                                                    <td style="width: 25%">1650</td>
-                                                    <td style="width: 25%">650 + 40 р/км</td>
+                                                    <td>900–1000 кг</td>
+                                                    <td>1200</td>
+                                                    <td>1550</td>
+                                                    <td>650 + 40 р/км</td>
                                                 </tr>
                                                 <tr>
-                                                    <td style="width: 25%">1100–1200 кг</td>
-                                                    <td style="width: 25%">1400</td>
-                                                    <td style="width: 25%">1750</td>
-                                                    <td style="width: 25%">650 + 40 р/км</td>
+                                                    <td>1000–1100 кг</td>
+                                                    <td>1300</td>
+                                                    <td>1650</td>
+                                                    <td>650 + 40 р/км</td>
                                                 </tr>
                                                 <tr>
-                                                    <td style="width: 25%">1200–1300 кг</td>
-                                                    <td style="width: 25%">1500</td>
-                                                    <td style="width: 25%">1850</td>
-                                                    <td style="width: 25%">650 + 40 р/км</td>
+                                                    <td>1100–1200 кг</td>
+                                                    <td>1400</td>
+                                                    <td>1750</td>
+                                                    <td>650 + 40 р/км</td>
                                                 </tr>
                                                 <tr>
-                                                    <td style="width: 25%">1300–1400 кг</td>
-                                                    <td style="width: 25%">1600</td>
-                                                    <td style="width: 25%">1950</td>
-                                                    <td style="width: 25%">650 + 40 р/км</td>
+                                                    <td>1200–1300 кг</td>
+                                                    <td>1500</td>
+                                                    <td>1850</td>
+                                                    <td>650 + 40 р/км</td>
                                                 </tr>
                                                 <tr>
-                                                    <td style="width: 25%">1400–1500 кг</td>
-                                                    <td style="width: 25%">1700</td>
-                                                    <td style="width: 25%">2050</td>
-                                                    <td style="width: 25%">650 + 40 р/км</td>
+                                                    <td>1300–1400 кг</td>
+                                                    <td>1600</td>
+                                                    <td>1950</td>
+                                                    <td>650 + 40 р/км</td>
                                                 </tr>
                                                 <tr>
-                                                    <td style="width: 25%">1500–3000 кг</td>
-                                                    <td style="width: 25%">1900</td>
-                                                    <td style="width: 25%">2700</td>
-                                                    <td style="width: 25%">650 + 40 р/км</td>
+                                                    <td>1400–1500 кг</td>
+                                                    <td>1700</td>
+                                                    <td>2050</td>
+                                                    <td>650 + 40 р/км</td>
                                                 </tr>
                                                 <tr>
-                                                    <td style="width: 25%">3000–5000 кг</td>
-                                                    <td style="width: 25%">3500</td>
-                                                    <td style="width: 25%">4500</td>
-                                                    <td style="width: 25%">650 + 40 р/км</td>
+                                                    <td>1500–3000 кг</td>
+                                                    <td>1900</td>
+                                                    <td>2700</td>
+                                                    <td>650 + 40 р/км</td>
                                                 </tr>
                                                 <tr>
-                                                    <td style="width: 25%">5000–7000 кг</td>
-                                                    <td style="width: 25%">4800</td>
-                                                    <td style="width: 25%">6600</td>
-                                                    <td style="width: 25%">650 + 40 р/км</td>
+                                                    <td>3000–5000 кг</td>
+                                                    <td>3500</td>
+                                                    <td>4500</td>
+                                                    <td>650 + 40 р/км</td>
                                                 </tr>
                                                 <tr>
-                                                    <td style="width: 25%">7000–20000 кг</td>
-                                                    <td style="width: 25%">6500</td>
-                                                    <td style="width: 25%">9100</td>
-                                                    <td style="width: 25%">650 + 40 р/км</td>
+                                                    <td>5000–7000 кг</td>
+                                                    <td>4800</td>
+                                                    <td>6600</td>
+                                                    <td>650 + 40 р/км</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>7000–20000 кг</td>
+                                                    <td>6500</td>
+                                                    <td>9100</td>
+                                                    <td>650 + 40 р/км</td>
                                                 </tr>
                                             </tbody>
                                         </table>
