--- a/lescraft/services.html
+++ b/lescraft/services.html
@@ -1014,12 +1014,12 @@
 <div class="fixed-block fixed-menu">
     <div class="container">
         <ul>
-            <li><a href="#"><svg><use xlink:href="img/svg/sprite.svg#home"></use></svg><span>Главная</span></a></li>
-            <li><a href="#"><svg><use xlink:href="img/svg/sprite.svg#catalog"></use></svg><span>Каталог</span></a></li>
-            <li><a href><svg><use xlink:href="img/svg/sprite.svg#fav"></use></svg><span>Избранное</span></a></li>
-            <!-- <li><a href="profile.html"><svg><use xlink:href="img/svg/sprite.svg#profile"></use></svg><span>Профиль</span></a></li> 
-            <li><button class="btn mod-open-btn" data-modal="account-modal"><svg><use xlink:href="img/svg/sprite.svg#profile"></use></svg><span>Войти</span></button></li>-->
-            <li><a href="#"><svg><use xlink:href="img/svg/sprite.svg#cart"></use></svg><span>Корзина</span></a></li>
+            <li><a href="#"><div class="fixed-menu__icon"><svg><use xlink:href="img/svg/sprite.svg#home"></use></svg></div><span>Главная</span></a></li>
+            <li><a href="#"><div class="fixed-menu__icon"><svg><use xlink:href="img/svg/sprite.svg#catalog"></use></svg></div><span>Каталог</span></a></li>
+            <li><a href="#"><div class="fixed-menu__icon"><svg><use xlink:href="img/svg/sprite.svg#fav"></use></svg><span>3</span></div><span>Избранное</span></a></li>
+            <!-- <li><a href="profile.html"><div class="fixed-menu__icon"><svg><use xlink:href="img/svg/sprite.svg#profile"></use></svg></div><span>Профиль</span></a></li> 
+            <li><button class="btn mod-open-btn" data-modal="account-modal"><div class="fixed-menu__icon"><svg><use xlink:href="img/svg/sprite.svg#profile"></use></svg></div><span>Войти</span></button></li> -->
+            <li><a href="#"><div class="fixed-menu__icon"><svg><use xlink:href="img/svg/sprite.svg#cart"></use></svg><span>6</span></div><span>Корзина</span></a></li>
         </ul>
     </div>
 
