--- a/lescraft/showrooms.html
+++ b/lescraft/showrooms.html
@@ -1241,12 +1241,12 @@
 <div class="fixed-block fixed-menu">
     <div class="container">
         <ul>
-            <li><a href="#"><svg><use xlink:href="img/svg/sprite.svg#home"></use></svg><span>Главная</span></a></li>
-            <li><a href="#"><svg><use xlink:href="img/svg/sprite.svg#catalog"></use></svg><span>Каталог</span></a></li>
-            <li><a href><svg><use xlink:href="img/svg/sprite.svg#fav"></use></svg><span>Избранное</span></a></li>
-            <!-- <li><a href="profile.html"><svg><use xlink:href="img/svg/sprite.svg#profile"></use></svg><span>Профиль</span></a></li> 
-            <li><button class="btn mod-open-btn" data-modal="account-modal"><svg><use xlink:href="img/svg/sprite.svg#profile"></use></svg><span>Войти</span></button></li>-->
-            <li><a href="#"><svg><use xlink:href="img/svg/sprite.svg#cart"></use></svg><span>Корзина</span></a></li>
+            <li><a href="#"><div class="fixed-menu__icon"><svg><use xlink:href="img/svg/sprite.svg#home"></use></svg></div><span>Главная</span></a></li>
+            <li><a href="#"><div class="fixed-menu__icon"><svg><use xlink:href="img/svg/sprite.svg#catalog"></use></svg></div><span>Каталог</span></a></li>
+            <li><a href="#"><div class="fixed-menu__icon"><svg><use xlink:href="img/svg/sprite.svg#fav"></use></svg><span>3</span></div><span>Избранное</span></a></li>
+            <!-- <li><a href="profile.html"><div class="fixed-menu__icon"><svg><use xlink:href="img/svg/sprite.svg#profile"></use></svg></div><span>Профиль</span></a></li> 
+            <li><button class="btn mod-open-btn" data-modal="account-modal"><div class="fixed-menu__icon"><svg><use xlink:href="img/svg/sprite.svg#profile"></use></svg></div><span>Войти</span></button></li> -->
+            <li><a href="#"><div class="fixed-menu__icon"><svg><use xlink:href="img/svg/sprite.svg#cart"></use></svg><span>6</span></div><span>Корзина</span></a></li>
         </ul>
     </div>
 
@@ -1326,6 +1326,7 @@
     let geoObjects = [] 
     let activePlacemark 
     let showroomTimeout
+    let maxZoom = 15
     function setmapDefaults(map) {
         map.controls.remove('geolocationControl'); // удаляем геолокацию
         map.controls.remove('searchControl'); // удаляем поиск
@@ -1446,8 +1447,8 @@
                     let pointsList = showrooms.filter(item => Number(item['city_id']) === id).map(item => item.coords)
                     if (pointsList.length) {
                         showroomsMap.setBounds(ymaps.util.bounds.fromPoints(pointsList), {
-                            checkZoomRange: true
-                        });
+                            checkZoomRange: true,
+                        }).then(function(){ if(showroomsMap.getZoom() > maxZoom) showroomsMap.setZoom(maxZoom)});
                     }  
                     showroomsMap.balloon.close()             
                 })
@@ -1462,7 +1463,7 @@
                     if (geoObjects[idx]) {
                         if(item.parentNode.classList.contains("active")) {
                             const coords = geoObjects[idx].geometry.getCoordinates(); 
-                            showroomsMap.setCenter(coords, 15);
+                            showroomsMap.setCenter(coords, maxZoom);
                             balloonOnOpen(geoObjects[idx])
                         } else {
                             balloonOnClose(geoObjects[idx])
