--- a/#src/index.html
+++ b/#src/index.html
@@ -100,8 +100,8 @@
         <li><a href="orders-history.html" target="_blank">История заказов</a></li>
         <li><a href="orders-history-empty.html" target="_blank">История заказов - пусто</a></li>
         <li><a href="payment-success.html" target="_blank">Оплата заказа - успех</a></li>
-        <li><a href="price.html" target="_blank">Прайс-лист - ЛК</a></li>
-        <li><a href="price-list.html" target="_blank">Прайс-лист</a></li>
+        <li><a href="price-list.html" target="_blank">Прайс-лист - ЛК</a></li>
+        <li><a href="price.html" target="_blank">Прайс-лист</a></li>
         <li><a href="promos.html" target="_blank">Акции</a></li>
         <li><a href="promo.html" target="_blank">Акция</a></li>
         <li><a href="faq.html" target="_blank">Ответы на частые вопросы</a></li>
