--- a/#src/legal-entity.html
+++ b/#src/legal-entity.html
@@ -24,10 +24,10 @@
                             <div class="item-intro__content">
                                 <h1 class="text-l">Стройматериалы для&nbsp;бизнеса: Все&nbsp;в&nbsp;одном месте.</h1>
                                 <p>Зарегистрируйтесь на нашем сайте, чтобы упростить процесс закупок, отслеживать заказы и получать оперативные консультации</p>
-                                <a href class="btn main-btn main-btn--link">
+                                <button class="btn main-btn main-btn--link mod-open-btn" data-modal="reg-modal">
                                     Зарегистрироваться
                                     <svg><use xlink:href="img/svg/sprite.svg#link"></use></svg>
-                                </a>
+                                </button>
                             </div>
                             <div class="media-contain">
                                 <img src="img/content/intro-bg-1.png" alt>
