--- a/#src/profile.html
+++ b/#src/profile.html
@@ -46,7 +46,7 @@
                                 <div class="profile-p__wrapper">
                                     <div class="profile-p__sec">
                                         <div class="profile-p__lbl">Личная информация</div>
-                                        <form class="form profile-p__form" onsubmit="event.preventDefault();formReset(this);openSuccessMod()">
+                                        <form class="form profile-p__form">
                                             <div class="form__grid form__items">
                                                 <div class="item-form item-form--readonly" aria-readonly="true">
                                                     <span>Телефон</span>
