--- a/lescraft/promos.html
+++ b/lescraft/promos.html
@@ -449,6 +449,24 @@
                         <div class="sec-top">
                             <h1>Акции</h1>
                         </div>
+                        <!--promo-block-->
+                        <div class="mb-60 promo-block">
+                            <div class="promo-block__img">
+                                <picture>
+                                    <source srcset="img/promos-bg.webp" media="(min-width: 700.98px) " type="image/webp">
+                                    <source srcset="img/promos-bg.png" media="(min-width: 700.98px)">
+                                    <source srcset="img/promos-bg-mob.webp" type="image/webp">
+                                    <source srcset="img/promos-bg-mob.png">
+                                    <img src="img/promos-bg.png" alt="">
+                                </picture>
+                            </div>
+                            <div class="promo-block__content">
+                                <h2 class="h1">Выгодное предложение</h2>
+                                <p>Строганный брус — один из главных материалов, применяемых в&nbsp;деревянном домостроении. Используется для&nbsp;возведения стен жилых
+                                    и&nbsp;общественных зданий, бань, хозяйственных построек.</p>
+                            </div>
+                        </div>
+                        <!--promos-p__wrapper-->
                         <div class="promos-p__wrapper">
                             <div class="promos-p__items">
                                 <!--item-promo-->
